# scratch-compiler

./: Cargo.toml  README.md
fancy-match/: Cargo.toml
fancy-match/src/: lib.rs
src/: asset.rs  ast.rs  codegen.rs  diagnostic.rs  error.rs  formatter.rs  ir.rs  lint.rs  macros.rs  main.rs  optimize.rs  opts.rs  parser.rs  rewrite.rs  ser.rs  span.rs  uid.rs
src/codegen/: sb3.rs  x86_64.rs
src/codegen/sb3/: expr.rs  reporter.rs  sprite.rs  statement.rs
src/codegen/x86_64/: broadcast.rs  expr.rs  prelude.s  statement.rs  typ.rs
src/diagnostic/: error.rs  warning.rs
src/ir/: expr.rs  mod.rs  proc.rs  sprite.rs  statement.rs
src/optimize/: expr.rs  statement.rs
src/parser/: input.rs
src/ser/: codegen.rs  proc.rs  reporter.rs  sprite.rs
src/ser/codegen/: expr.rs  reporter.rs  statement.rs
