[package]
name = "scratch-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-match = { git = "https://github.com/Johan-Mi/fancy-match" }
sb3-stuff = { git = "https://github.com/Johan-Mi/sb3-stuff" }
md5 = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
smol_str = "0.1"
codespan = { git = "https://github.com/Johan-Mi/codespan" }
codespan-reporting = { git = "https://github.com/Johan-Mi/codespan" }
phf = { version = "0.11.1", features = ["macros"] }
gumdrop = "0.8.1"
cranelift = "0.92.0"
cranelift-module = "0.92.0"
cranelift-object = "0.92.0"
env_logger = { version = "0.10.0", default-features = false }
winnow = "0.3.2"
