[package]
name = "scratch-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-match = { git = "https://github.com/Johan-Mi/fancy-match" }
sb3-stuff = { git = "https://github.com/Johan-Mi/sb3-stuff" }
md5 = "0.7.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
smol_str = "0.2"
phf = { version = "0.11.1", features = ["macros"] }
gumdrop = "0.8.1"
cranelift = "0.95.1"
cranelift-module = "0.95.1"
cranelift-object = "0.95.1"
env_logger = { version = "0.10.0", default-features = false }
winnow = "0.4.4"
codemap = "0.1.3"
codemap-diagnostic = { git = "https://github.com/Johan-Mi/codemap-diagnostic", version = "0.1.1" }
