[package]
name = "scratch-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sb3-stuff = { git = "https://github.com/Johan-Mi/sb3-stuff" }
md5 = "0.7.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
smol_str = "0.2"
gumdrop = "0.8.1"
cranelift = "0.97.1"
cranelift-module = "0.97.1"
cranelift-object = "0.97.1"
env_logger = { version = "0.10.0", default-features = false }
winnow = "0.5.0"
codemap = "0.1.3"
codemap-diagnostic = { git = "https://github.com/Johan-Mi/codemap-diagnostic", version = "0.1.1" }
